# app/app/docs/swagger.yaml
@@ -33,6 +33,8 @@ paths:
       tags:
         - "users"
       summary: "Get all users"
+      security:
+        - BearerAuth: []
       responses:
         200:
           description: "A list of users"
@@ -43,6 +45,8 @@ paths:
       tags:
         - "users"
       summary: "Get user by email"
+      security:
+        - BearerAuth: []
       parameters:
         - name: "email"
           in: "path"
@@ -184,6 +188,16 @@ paths:
       responses:
         200:
           description: "Item deleted from cart"
+        500:
+          description: "Internal server error"
+  /users/staff:
+    get:
+      tags:
+        - "users"
+      summary: "Get staff users"
+      responses:
+        200:
+          description: "A list of users from the staff"
         500:
           description: "Internal server error"
   /posts:
